--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link href="style.css"rel="stylesheet">
     </head>
     <body>
-        <header><img src="/uploads/2020/12/header_0_1609082687.svg">
+        <header><img src="//header_0_1609082687.svg">
         </header>
         <main>
         <p class="s">  
@@ -15,9 +15,9 @@
         </p>
             <h1>Болдеринг</h1>
         <p>
-            <img src="/uploads/2020/12/image1_0_1609082687.png">
-            <img src="/uploads/2020/12/image2_0_1609082687.png">
-            <img src="/uploads/2020/12/image3_0_1609082687.png">
+            <img src="//image1_0_1609082687.png">
+            <img src="//2020/12/image2_0_1609082687.png">
+            <img src="//2020/12/image3_0_1609082687.png">
         </p>
         <p class="t">Никогда не были на скалодроме? — Скорее сделайте первую попытку залезть наверх! На наших площадках залы разной трудности. Тренировки безопасны, для новичков предусмотрена автостраховка, в залах работают инструкторы. Для детей выделенные зоны с увлекательными аттракционами. Есть абонемент, скидки и система индивидуальных занятий. Перед посещением, пожалуйста, ознакомьтесь с правилами техники безопасности.</p>
         </main>
